--- a/dmcoptometry/patient-information/guarantee.html
+++ b/dmcoptometry/patient-information/guarantee.html
@@ -18,7 +18,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../about/index.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact/index.html">Contact</a></li>
                         <li class="nav-item dropdown">
@@ -26,7 +26,7 @@
                                 Patient Information
                             </a>
                             <div class="dropdown-menu" aria-labelledby="patientInfoDropdown">
-                                <a class="dropdown-item" href="../patient-information/guarantee.html">Guarantee</a>
+                                <a class="dropdown-item active" href="../patient-information/guarantee.html">Guarantee</a>
                                 <a class="dropdown-item" href="../patient-information/contact-lens-fitting.html">Contact Lens Fitting</a>
                                 <a class="dropdown-item" href="../patient-information/faq.html">Frequently Asked Questions</a>
                             </div>
@@ -35,56 +35,16 @@
                     </ul>
                 </div>
             </nav>
-            <div class="container-fluid  parallax-container">
-                <div class="row">
-                    <div class="parallax service-hero">
-                        <div class="caption">
-                            <h1>What are Optometrists?</h1>
-                            <div class="row">
-                                <div class="col-md-6 offset-md-3 caption-text pt-3">
-                                    <p>Optometrists are health care providers who examine, assess, and manage conditions and disorders of the human visual system (the eye). They prescribe treatments for corrective errors including glasses and contact lenses.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container p-5">
-                <div class="row">
-                    <h1 class="border-blue">Why are visits important?</h1>
-                    <p>While most people know about Optometrists and the diagnosis prescribing correction for visual errors using glasses and contact lenses, few know of the wide scope of diseases and conditions both ocular and systemic (body wide) an Optometrist looks for during an eye exam. From amblyopia, glaucoma, and macular degeneration to diabetes, hypertension, and many more. The unique view into the body through the eye makes the Optometrist a vital link in your health.</p>
-                    <p>So if you are due (or past due) for an annual eye exam, contact us today for an annual eye exam.</p>
-                </div>
-            </div>
-            <div class="container-fluid parallax-container">
-                <div class="row">
-                    <div class="parallax service-hero h-75">
-                        <div class="caption p-5">
-                            <h1>Your first visit</h1>
-                            <div class="row">
-                                <div class="col-md-6 offset-md-3 caption-text pt-3">
-                                    <p>After checking in with our friendly staff, you will be given a short questionnaire to collect information and past medical and ocular history to help focus and tailor your exam to you.</p>
-                                    <p>When you are finished with your questionnaire, the staff or doctor will begin pretesting with our automated instruments and, if necessary, further advanced screening tests.</p>
-                                    <p>Your doctor will then call you into the exam room where he will review the questionnaire, pre-test information and proceed with the eye exam.</p>
-                                    <p>At the conclusion of the exam you should expect a prescription, a follow-up schedule, and a smile.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="container-fluid text-center pt-5">
+                <img class="img-fluid" src="../static/img/guarantee.png" />
             </div>
             <div class="container p-5">
                 <div class="row">
                     <div class="col-md-12">
-                        <h1 class="border-blue">Meet Our Optometrist</h1>
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <img src="../static/img/denmark.png" />
-                    </div>
-                    <div class="col-md-6">
-                        <p>Dr. Dan Mark Cuevas graduated from Harry Ainlay Composite High School in Edmonton, AB in 2005. He began university in the fall of that same year at the University of Alberta. After 2 years at the U of A, Dr. Cuevas trasferred to  the University of Waterloo in Waterloo, Ontario where he graduated with a B.Sc in Honours Biomedical Sciences in 2010.</p>
-                        <p>Dr. Cuevas began his formal optometric education in August 2010 at the Arizona College of Optometry at Midwestern University in Glendale, Arizona and graduated May of 2014. While there he served as the class historian, and treasurer for the Lions Club at the University. He was also involved in academic research involving the measurement of dynamic visual acuity and has presented 2 academic posters at the American Academy of Optometry.</p>
-                        <p>During his free time he enjoys playing the piano and guitar, hiking, snowboarding, and taking photographs of the adventures in between.</p>
+                        <h1 class="border-blue">Our 90 Day Guarantee</h1>
+                        <p>
+                            We are committed to providing you with the most accurate prescription possible. However, we recognize that eyes, like the rest of the body, are dynamic structures and prescriptions can change from time to time. We guarantee your prescriptions accuracy for 90 days after your initial visit. If you are not completely satisfied with your vision, we will be happy to recheck your prescription at no extra charge. Any rechecks or visits after the 90 days may be charged the usual and customary fees.  As our clinic does not produce lenses or fill prescriptions, please check with the optical you choose for their policy on remakes.
+                        </p>
                     </div>
                 </div>
             </div>
