--- a/dmcoptometry/careers/index.html
+++ b/dmcoptometry/careers/index.html
@@ -19,7 +19,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact/index.html">Contact</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="patientInfoDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -31,56 +31,19 @@
                                 <a class="dropdown-item" href="../patient-information/faq.html">Frequently Asked Questions</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="../careers/index.html">Careers</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="../careers/index.html">Careers</a></li>
                     </ul>
                 </div>
             </nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="parallax service-hero"></div>
-                </div>
-            </div>
             <div class="container">
-                <div class="row pt-5 pb-5">
+                <div class="row p-5">
                     <div class="col-md-12">
-                        <h3>Comprehensive Eye Exams</h3>
-                        <p>More details than what was on the front page. Or exactly the same, its really up to you. Here you can talk about the service procedure or give a blurb about it</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Dry Eyes Evaluation</h3>
-                        <p>Not living in Vancouver sucks, it's true. But don't let your eyes, which are supposed to be wet, be dry. We'll fix you up so you can cry yourself to sleep at night.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Sclera Refactoring</h3>
-                        <p>We will take our stethopthomometer and prod your sclera near the iris. You get two for flinching.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Free Eye Exams</h3>
-                        <p>In exchange for a lunch, you promised</p>
-                    </div>
-                </div>
-            </div>
-            <div id="scheduleBlock" class="container-fluid">
-                <div class="row">
-                    <div class="col-md-8 text-center">
-                        <h3>Schedule&nbsp;An&nbsp;Appointment</h3>
-                        <p class="small">Using our external booking site with Optiks International</p>
-                    </div>
-                    <div class="col-md-4 my-auto text-center">
-                        <a target="_blank" href="http://factoryoptical.ca/homepage/book-an-eye-exam-2/" class="btn btn-lg"><i class="far fa-calendar-alt mr-1"></i> Book Now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="float-parent">
-                <div id="scheduleMobileBlock" class="sticky-bottom container-fluid">
-                    <div class="row">
-                        <div class="col-md-8 text-center">
-                            <h5>Schedule an Appointment</h5>
-                            <p class="small">Using our external booking site with Optiks International</p>
-                        </div>
-                        <div class="col-md-4 my-auto text-center">
-                            <button class="btn">Book Now</button>
-                        </div>
+                        <h1 class="border-blue text-center">Careers at DMC Optometry</h1>
+                        <h3 class="zag font-weight-bold">Full time Associate Optometrist - Lethbridge</h3>
+                        <p>Our growing, non-dispensing practices are looking to hire a full time associate to increase capacity. Days would typically comprise of Tuesday, Wednesday, and Friday 9:00 am to 6:00pm; Thursday 11:00am to 7:00pm and Saturday 9:00 am to 3:00 pm. We are Closed Sundays and stat holidays.</p>
+                        <p>Our offices are equipped with electronic health records, retinal cameras, and computerized visual fields. Pre-testing done by friendly staff. Opportunity to grow within the practice. New grads encouraged to apply.</p>
+                        <p>Generous compensation including guaranteed and performance based income, health and travel benefits. There will be opportunity to grow within the practice after long-term service.</p>
+                        <p>Email <a href="mailto:careers@dmcoptometry.com" class="card-href">careers@dmcoptometry.com</a> with resume.</p>
                     </div>
                 </div>
             </div>
