--- a/dmcoptometry/patient-information/guarantee.html
+++ b/dmcoptometry/patient-information/guarantee.html
@@ -19,14 +19,14 @@
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="../about/index.html">About</a></li>
-                        <li class="nav-item active"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../our-practice/index.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="../contact/index.html">Contact</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="patientInfoDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Patient Information
                             </a>
                             <div class="dropdown-menu" aria-labelledby="patientInfoDropdown">
-                                <a class="dropdown-item" href="../patient-information/guarantee.html">Guarantee</a>
+                                <a class="dropdown-item active" href="../patient-information/guarantee.html">Guarantee</a>
                                 <a class="dropdown-item" href="../patient-information/contact-lens-fitting.html">Contact Lens Fitting</a>
                                 <a class="dropdown-item" href="../patient-information/faq.html">Frequently Asked Questions</a>
                             </div>
@@ -35,28 +35,16 @@
                     </ul>
                 </div>
             </nav>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="parallax service-hero"></div>
-                </div>
+            <div class="container-fluid text-center pt-5">
+                <img class="img-fluid" src="../static/img/guarantee.png" />
             </div>
-            <div class="container">
-                <div class="row pt-5 pb-5">
+            <div class="container p-5">
+                <div class="row">
                     <div class="col-md-12">
-                        <h3>Comprehensive Eye Exams</h3>
-                        <p>More details than what was on the front page. Or exactly the same, its really up to you. Here you can talk about the service procedure or give a blurb about it</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Dry Eyes Evaluation</h3>
-                        <p>Not living in Vancouver sucks, it's true. But don't let your eyes, which are supposed to be wet, be dry. We'll fix you up so you can cry yourself to sleep at night.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Sclera Refactoring</h3>
-                        <p>We will take our stethopthomometer and prod your sclera near the iris. You get two for flinching.</p>
-                    </div>
-                    <div class="col-md-12">
-                        <h3>Free Eye Exams</h3>
-                        <p>In exchange for a lunch, you promised</p>
+                        <h1 class="border-blue">Our 90 Day Guarantee</h1>
+                        <p>
+                            We are committed to providing you with the most accurate prescription possible. However, we recognize that eyes, like the rest of the body, are dynamic structures and prescriptions can change from time to time. We guarantee your prescriptions accuracy for 90 days after your initial visit. If you are not completely satisfied with your vision, we will be happy to recheck your prescription at no extra charge. Any rechecks or visits after the 90 days may be charged the usual and customary fees.  As our clinic does not produce lenses or fill prescriptions, please check with the optical you choose for their policy on remakes.
+                        </p>
                     </div>
                 </div>
             </div>
