--- a/dmcoptometry/about/index.html
+++ b/dmcoptometry/about/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="container p-5">
+            <div id="ourOptometrist" class="container p-5">
                 <div class="row">
                     <div class="col-md-12">
                         <h1 class="border-blue">Meet Our Optometrist</h1>
