--- a/dmcoptometry/contact/index.html
+++ b/dmcoptometry/contact/index.html
@@ -13,7 +13,7 @@
         </head>
         <body>
             <nav class="navbar navbar-default navbar-expand-lg navbar-custom navbar-light">
-                <a class="navbar-brand" href="./index.html">DMC Optometry</a>
+                <a class="navbar-brand" href="../index.html">DMC Optometry</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
