--- a/dmcoptometry/index.html
+++ b/dmcoptometry/index.html
@@ -50,7 +50,7 @@
                     <div class="carousel-item">
                         <img class="d-block w-100" src="./static/img/force.jpg" alt="Second slide">
                         <div class="carousel-caption text-center">
-                            <button type="button" class="btn btn-outline-light bg-transparent">Meet our optometrist</button>
+                            <a type="button" href="./about/index.html#ourOptometrist" class="btn btn-outline-light bg-transparent">Meet our optometrist</a>
                         </div>
                     </div>
                 </div>
