--- a/dmcoptometry/about/index.html
+++ b/dmcoptometry/about/index.html
@@ -37,9 +37,9 @@
             </nav>
             <div class="container-fluid parallax-container">
                 <div class="row">
-                    <div id="optometrists" class="parallax service-hero">
+                    <div id="optometrists" class="parallax about-parallax-1">
                         <div class="caption pb-5 pt-5">
-                            <h1>What are Optometrists?</h1>
+                            <h1 class="text-white text-on-image">What are Optometrists?</h1>
                             <div class="row">
                                 <div class="col-md-6 offset-md-3 caption-text pt-3">
                                     <p>Optometrists are health care providers who examine, assess, and manage conditions and disorders of the human visual system (the eye). They prescribe treatments for corrective errors including glasses and contact lenses.</p>
@@ -58,9 +58,9 @@
             </div>
             <div class="container-fluid parallax-container">
                 <div class="row">
-                    <div class="parallax service-hero2 h-75">
+                    <div class="parallax about-parallax-2 h-75">
                         <div class="caption p-5">
-                            <h1>Your first visit</h1>
+                            <h1 class="text-white text-on-image">Your first visit</h1>
                             <div class="row">
                                 <div class="col-md-6 offset-md-3 caption-text pt-3">
                                     <p>After checking in with our friendly staff, you will be given a short questionnaire to collect information and past medical and ocular history to help focus and tailor your exam to you.</p>
@@ -79,7 +79,7 @@
                         <h1 class="border-blue">Meet Our Optometrist</h1>
                     </div>
                     <div class="col-md-6 mb-3">
-                        <img src="../static/img/denmark.png" />
+                        <img class="img-fluid" src="../static/img/dan-mark-cuevas.jpg" />
                     </div>
                     <div class="col-md-6">
                         <p>Dr. Dan Mark Cuevas graduated from Harry Ainlay Composite High School in Edmonton, AB in 2005. He began university in the fall of that same year at the University of Alberta. After 2 years at the U of A, Dr. Cuevas trasferred to  the University of Waterloo in Waterloo, Ontario where he graduated with a B.Sc in Honours Biomedical Sciences in 2010.</p>
