--- a/dmcoptometry/our-practice/index.html
+++ b/dmcoptometry/our-practice/index.html
@@ -37,7 +37,7 @@
             </nav>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="parallax service-hero"></div>
+                    <div class="parallax service-parallax"></div>
                 </div>
             </div>
             <div class="container">
