--- a/dmcoptometry/patient-information/contact-lens-fitting.html
+++ b/dmcoptometry/patient-information/contact-lens-fitting.html
@@ -47,24 +47,30 @@
             </p>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-3">
         <div class="col-md-6">
             <h2 class="border-blue">Contact Lens Fit Process</h2>
             <h5>Step 1 | The eye exam and glasses prescription</h5>
             <p>Your eye health and function is evaluated during the eye exam to make sure you are suitable for contact lens wear. The glasses prescription is usually released to you, the patient, at this stage. The glasses prescription is then used as a starting point for the contact lenses.</p>
             <p>We then use measurements, already obtained during the exam, to ensure the contact lenses will fit your specific needs such as curvature and size.</p>
-            <h5>Step 2 | Trial Contact Lenses</h5>
-            <p>After selecting a contact lens, we have you place the contact lenses into your eyes, or, if necessary, we train you how to wear the contact lenses. We want you to see how the lenses perform in your day to day world - if the lenses are fitting your eyes during the visit, we release the trial contacts to you to try out over the next week or so.</p>
-            <h5>Step 3 | Final Contact Lens Check</h5>
-            <p>After trialing the contact lenses in your day to day world, we ask you to come back for a scheduled visit. This  follow-up is to ensure you have good comfort and clarity, and that the contacts are fitting safely on your eyes. We ask you to wear your contact lenses for at least 2 hours prior to your follow-up appointment. If the fit is satisfactory, we will provide you with a final contact lens prescription then.</p>
-        </div>
+         </div>
         <div class="col-md-6">
-            <p>IMAGE HERE MAYBE OF A CONTACT LENS? LOL</p>
+            <img class="img-fluid" src="../static/img/contact-lens-fitting-1.jpg"/>
         </div>
     </div>
     <div class="row">
         <div class="col-md-6">
-            <p>ANOTHER IMAGE MAYBE?</p>
+            <h5>Step 2 | Trial Contact Lenses</h5>
+            <p>After selecting a contact lens, we have you place the contact lenses into your eyes, or, if necessary, we train you how to wear the contact lenses. We want you to see how the lenses perform in your day to day world - if the lenses are fitting your eyes during the visit, we release the trial contacts to you to try out over the next week or so.</p>
+        </div>
+        <div class="col-md-6">
+            <h5>Step 3 | Final Contact Lens Check</h5>
+            <p>After trialing the contact lenses in your day to day world, we ask you to come back for a scheduled visit. This  follow-up is to ensure you have good comfort and clarity, and that the contacts are fitting safely on your eyes. We ask you to wear your contact lenses for at least 2 hours prior to your follow-up appointment. If the fit is satisfactory, we will provide you with a final contact lens prescription then.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 mb-3">
+            <img class="img-fluid" src="../static/img/contact-lens-fitting-2.jpg"/>
         </div>
         <div class="col-md-6">
             <h2 class="border-blue">Some Final Notes and Disclosures</h2>
