--- a/dmcoptometry/index.html
+++ b/dmcoptometry/index.html
@@ -17,7 +17,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item active"><a class="nav-link" href="../index.html">Home</a></li>
+                        <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="./about/index.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="./our-practice/index.html">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contact/index.html">Contact</a></li>
@@ -42,15 +42,15 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="./static/img/mounins.jpg" alt="First slide">
+                        <img class="d-block w-100" src="./static/img/meet-hero.jpg" alt="First slide">
                         <div class="carousel-caption text-center">
-                            <a href="./contact/" type="button" class="btn btn-outline-light bg-transparent">Location</a>
+                            <a type="button" href="./about/index.html#ourOptometrist" class="btn btn-outline-dark bg-transparent">Meet our optometrist</a>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./static/img/force.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="./static/img/storefront.jpg" alt="Second slide">
                         <div class="carousel-caption text-center">
-                            <a type="button" href="./about/index.html#ourOptometrist" class="btn btn-outline-light bg-transparent">Meet our optometrist</a>
+                            <a href="./contact/" type="button" class="btn btn-outline-light bg-transparent">Location</a>
                         </div>
                     </div>
                 </div>
