--- a/dmcoptometry/index.html
+++ b/dmcoptometry/index.html
@@ -12,7 +12,7 @@
             <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
         </head>
         <body>
-            <nav class="navbar navbar-default navbar-expand-lg navbar-custom navbar-light">
+            <nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light">
                 <a class="navbar-brand" href="./index.html">DMC Optometry</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarNav">
