--- a/dmcoptometry/patient-information/contact-lens-fitting.html
+++ b/dmcoptometry/patient-information/contact-lens-fitting.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-expand-lg navbar-custom navbar-light">
+<nav class="navbar fixed-top navbar-default navbar-expand-lg navbar-custom navbar-light">
     <a class="navbar-brand" href="../index.html">DMC Optometry</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -35,7 +35,7 @@
         </ul>
     </div>
 </nav>
-<div class="container p-5">
+<div id="fitting" class="container p-5">
     <div class="row">
         <div class="col-md-12">
             <h2 class="border-blue">Why Do I Need a Contact Lens Fitting?</h2>
