--- a/dmcoptometry/careers/index.html
+++ b/dmcoptometry/careers/index.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="utf-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>DMC Optometry | Southern Alberta Optometrist</title>
+            <title>CAREERS | DMC Optometry</title>
             <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
             <script src="../static/js/jquery-3.4.0.min.js"></script>
             <script src="../static/js/bootstrap.min.js"></script>
@@ -37,7 +37,7 @@
             </nav>
             <div class="container">
                 <div class="row p-5">
-                    <div class="col-md-12">
+                    <div class="col-md-12 pt-5">
                         <h1 class="border-blue text-center">Careers at DMC Optometry</h1>
                         <h3 class="zag font-weight-bold">Full time Associate Optometrist - Lethbridge</h3>
                         <p>Our growing, non-dispensing practices are looking to hire a full time associate to increase capacity. Days would typically comprise of Tuesday, Wednesday, and Friday 9:00 am to 6:00pm; Thursday 11:00am to 7:00pm and Saturday 9:00 am to 3:00 pm. We are Closed Sundays and stat holidays.</p>
@@ -51,7 +51,7 @@
                 <div class="row col-md-12">
                     <div class="col-md-4 mb-2">
                         <h3 class="font-weight-bold">DMC Optometry</h3>
-                        <p>%%PLACEHOLDER TEXT FOOTER%%</p>
+                        <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
                         <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
                             <i class="fab fa-facebook-f"></i>
                         </a>
