--- a/dmcoptometry/contact/index.html
+++ b/dmcoptometry/contact/index.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="utf-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>DMC Optometry | Southern Alberta Optometrist</title>
+            <title>CONTACT US | DMC Optometry</title>
             <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
             <script src="../static/js/jquery-3.4.0.min.js"></script>
             <script src="../static/js/bootstrap.min.js"></script>
@@ -193,7 +193,7 @@
                 <div class="row col-md-12">
                     <div class="col-md-4 mb-2">
                         <h3 class="font-weight-bold">DMC Optometry</h3>
-                        <p>%%PLACEHOLDER TEXT FOOTER%%</p>
+                        <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
                         <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
                             <i class="fab fa-facebook-f"></i>
                         </a>
