--- a/dmcoptometry/index.html
+++ b/dmcoptometry/index.html
@@ -44,13 +44,13 @@
                     <div class="carousel-item active">
                         <img class="d-block w-100" src="./static/img/meet-hero.jpg" alt="First slide">
                         <div class="carousel-caption text-center">
-                            <a type="button" href="./about/index.html#ourOptometrist" class="btn btn-outline-dark bg-transparent">Meet our optometrist</a>
+                            <a type="button" href="./about/index.html#ourOptometrist" class="btn">Meet our optometrist</a>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block w-100" src="./static/img/storefront.jpg" alt="Second slide">
                         <div class="carousel-caption text-center">
-                            <a href="./contact/" type="button" class="btn btn-outline-light bg-transparent">Location</a>
+                            <a href="./contact/" type="button" class="btn">Location</a>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,7 @@
                 <div class="row col-md-12">
                     <div class="col-md-4 mb-2">
                         <h3 class="font-weight-bold">DMC Optometry</h3>
-                        <p>%%PLACEHOLDER TEXT FOOTER%%</p>
+                        <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
                         <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
                             <i class="fab fa-facebook-f"></i>
                         </a>
