--- a/dmcoptometry/our-practice/index.html
+++ b/dmcoptometry/our-practice/index.html
@@ -4,7 +4,7 @@
         <head>
             <meta charset="utf-8"/>
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>DMC Optometry | Southern Alberta Optometrist</title>
+            <title>SERVICES | DMC Optometry</title>
             <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
             <script src="../static/js/jquery-3.4.0.min.js"></script>
             <script src="../static/js/bootstrap.min.js"></script>
@@ -44,19 +44,23 @@
                 <div class="row pt-5 pb-5">
                     <div class="col-md-12">
                         <h3>Comprehensive Eye Exams</h3>
-                        <p>More details than what was on the front page. Or exactly the same, its really up to you. Here you can talk about the service procedure or give a blurb about it</p>
+                        <p>Complete assessment of the visual system including a refraction (your glasses prescription), and an eye health assessment. Children (18 and under) and seniors (65 and over) are covered by Alberta Health Insurance (Valid Alberta Health Number is required)</p>
                     </div>
                     <div class="col-md-12">
-                        <h3>Dry Eyes Evaluation</h3>
-                        <p>Not living in Vancouver sucks, it's true. But don't let your eyes, which are supposed to be wet, be dry. We'll fix you up so you can cry yourself to sleep at night.</p>
+                        <h3>Medical Eye Exams</h3>
+                        <p>Health assessment of the ocular system from itchy and red eyes, to styes, headaches and everything in between. Be sure to bring your Alberta Health Number as this service is covered by Alberta Health. Unsure if your exam is covered? Give us a call or send us an email!</p>
                     </div>
                     <div class="col-md-12">
-                        <h3>Sclera Refactoring</h3>
-                        <p>We will take our stethopthomometer and prod your sclera near the iris. You get two for flinching.</p>
+                        <h3>Contact Lens Fittings</h3>
+                        <p>Contact lenses are a great option for vision but require a more detailed visit. <a class="card-href font-weight-bold" href="../patient-information/contact-lens-fitting.html">See Contact Lens Fitting for more information.</a></p>
                     </div>
                     <div class="col-md-12">
-                        <h3>Free Eye Exams</h3>
-                        <p>In exchange for a lunch, you promised</p>
+                        <h3>Refractive Surgery Referrals</h3>
+                        <p>Want to leave those glasses (and contacts) behind for good? Let us know and we can discuss your options for corrective surgery including LASIK, PRK, and RLE.</p>
+                    </div>
+                    <div class="col-md-12">
+                        <h3>Occupational Services</h3>
+                        <p>Need an eye exam for your drivers license or report for a career? Let us know what you need at the time of your appointment.</p>
                     </div>
                 </div>
             </div>
@@ -88,7 +92,7 @@
                 <div class="row col-md-12">
                     <div class="col-md-4 mb-2">
                         <h3 class="font-weight-bold">DMC Optometry</h3>
-                        <p>%%PLACEHOLDER TEXT FOOTER%%</p>
+                        <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
                         <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
                             <i class="fab fa-facebook-f"></i>
                         </a>
