--- a/dmcoptometry/patient-information/faq.html
+++ b/dmcoptometry/patient-information/faq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DMC Optometry | Southern Alberta Optometrist</title>
+    <title>FAQ | DMC Optometry</title>
     <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
     <script src="../static/js/jquery-3.4.0.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
@@ -36,7 +36,7 @@
     </div>
 </nav>
 <div class="container-fluid p-5">
-    <div class="row">
+    <div class="row pt-5">
         <div class="col-md-12">
             <h1 class="border-blue">Frequently Asked Questions</h1>
             <div id="accordion" class="pt-2">
@@ -110,6 +110,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-header" id="headingSix">
+                        <h5 class="mb-0 text-center">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                                What is an OCT?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                        <div class="card-body">
+                            OCT stands for Optical Coherence Tomographer. Our unit, the 3D Maestro 1 by Topcon, also has retinal photography built in. What all those words mean is that we are able to take high resolution cross section scans of the retina to allow for early detection and monitoring of many diseases including glaucoma, macular degeneration, diabetic retinopathy, and other conditions that may affect your eye health.
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
@@ -143,7 +157,7 @@
     <div class="row col-md-12">
         <div class="col-md-4 mb-2">
             <h3 class="font-weight-bold">DMC Optometry</h3>
-            <p>%%PLACEHOLDER TEXT FOOTER%%</p>
+            <p>We are a local optometrist committed to the advancement of eye care in the Lethbridge and surrounding area.</p>
             <a class="social-icon text-center facebook-bottom" href="https://www.facebook.com/dmcoptometry">
                 <i class="fab fa-facebook-f"></i>
             </a>
