--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
     </div>
     </section>
-    <script src="./static/js/fireflies.js"></script>
+    <script src="./static/js/circles.js"></script>
     <script src="./static/js/base.js"></script>
     </body>
 </html>
