Added volunteer page

--- a/bluebronna/about/faq.html
+++ b/bluebronna/about/faq.html
@@ -61,7 +61,7 @@
 </div>
 <div class="container">
     <h1 class="font-weight-bold">Frequently Asked Questions</h1>
-    <p>We are happy to answer any questions you may have! Below you will find the most popular ones. If you can't find your question, submit your question in the form on the right! You can also download the entire <a href="https://cdn2.hubspot.net/hubfs/2532015/Directions%20and%20Maps/FAQDocument.pdf" class="anchor-darkblue-gray">FAQ document here.</a></p>
+    <p>We are happy to answer any questions you may have! Below you will find the most popular ones. If you can't find your question, submit your question in the form on the right! You can also download the entire <a href="../static/files/FAQDocument.pdf" class="anchor-darkblue-gray">FAQ document here.</a></p>
     <div class="col-lg-8 mb-3">
         <div id="acc1">
             <div class="card">
@@ -187,7 +187,7 @@
                         <p>In the event of a cancellation after June 1 and we have not been able to fill it with another camper, the non-refundable amount will be held by BBWC for one year as a credit towards a future booking.</p>
                         <p class="font-weight-bold">Cancellation by BBWC:</p>
                         <p>In the event of a cancellation of a booking by BBWC a full refund will be given to those who have registered paid a deposit or any amount of the balance owing.</p>
-                        <p>Download the <a href="https://cdn2.hubspot.net/hubfs/2532015/Directions%20and%20Maps/Cancellation%20Policy.pdf">Cancellation Policy</a></p>
+                        <p>Download the <a href="../static/files/Cancellation%20Policy.pdf">Cancellation Policy</a></p>
                     </div>
                 </div>
             </div>
