--- a/bluebronna/upcoming-adventures/blue-rendezvous.html
+++ b/bluebronna/upcoming-adventures/blue-rendezvous.html
@@ -92,7 +92,7 @@
             <a href="https://www.eventbrite.ca/e/27th-annual-blue-rendezvous-fundraiser-tickets-53015140713?__hstc=&__hssc=&hsCtaTracking=f0773d6d-ca13-4420-bbb4-d7790581fd50%7C23d6b24d-8990-49de-ab6c-20ba8ab3a733" class="btn btn-outline-secondary btn-white-navy">Register</a>
             <h3 class="font-weight-bold bb-gray pt-5">Poster:</h3>
             <p>We would be so grateful if you would print off the below poster and put them up in your church, community locations!</p>
-            <p><a class="anchor-darkblue-gray" href="https://cdn2.hubspot.net/hubfs/2532015/Rendezvous/Rendezvous%202019/27th%20Annual%20Blue-2.pdf" target="_blank">Download the poster here!</a></p>
+            <p><a class="anchor-darkblue-gray" href="../static/files/27th%20Annual%20Blue.pdf" target="_blank">Download the poster here!</a></p>
             <h3 class="font-weight-bold bb-gray">Directions:</h3>
             <h5 class="font-weight-bold bb-gray">Apple Creek Golf Course (3.5 KM North of Airdrie):</h5>
             <ul>
