--- a/bluebronna/upcoming-adventures/ride-a-thon.html
+++ b/bluebronna/upcoming-adventures/ride-a-thon.html
@@ -96,7 +96,7 @@
             <p>We strive to keep our camper fees down so that the camps we provide remain affordable to those who otherwise could not come. We typically see 40% of our costs covered by the camper fees we charge and the other 60% is made up from donations to the organization.</p>
             <p>Our summer staff will be at the fundraiser to share how they have seen God working at BBWC over the past summer and the director will be sharing some of the vision we have for the future of this ministry. Celebrate with us as we praise God for what HE is doing at camp.</p>
             <p><strong>Click below to download a poster that can be printed off and put up in your local area.</strong></p>
-            <p><a class="anchor-darkblue-gray" href="https://cdn2.hubspot.net/hubfs/2532015/Ride-A-Thon/Ride-A-Thon%202018_Poster.pdf" target="_blank">Download the poster here</a></p>
+            <p><a class="anchor-darkblue-gray" href="../static/files/Ride-A-Thon%202018_Poster.pdf" target="_blank">Download the poster here</a></p>
             <p><strong>Directions:</strong></p>
             <p><a class="anchor-darkblue-gray" href="../about/locations.html">Click Here for Directions</a></p>
         </div>
