--- a/bluebronna/about/locations.html
+++ b/bluebronna/about/locations.html
@@ -84,7 +84,7 @@
             <div class="col-xs-12">
                 <p>Download the Map!</p>
 
-                <a href="https://cdn2.hubspot.net/hubfs/2532015/Directions%20and%20Maps/Blue%20Bronna%20Wilderness%20Camp%20Map.pdf">Blue Bronna Wilderness Camp Map</a>
+                <a href="../static/files/Blue%20Bronna%20Wilderness%20Camp%20Map.pdf">Blue Bronna Wilderness Camp Map</a>
             </div>
         </div>
         <div class="col-lg-4">
@@ -115,7 +115,7 @@
             <div class="col-xs-12">
                 <p>Download the Map!</p>
 
-                <a href="https://cdn2.hubspot.net/hubfs/2532015/Directions%20and%20Maps/Blue%20Bronna%20Wilderness%20Camp%20Map.pdf">Blue Bronna Wilderness Camp Map</a>
+                <a href="../static/files/Blue%20Bronna%20Wilderness%20Camp%20Map.pdf">Blue Bronna Wilderness Camp Map</a>
             </div>
         </div>
         <div class="col-lg-4">
@@ -130,7 +130,7 @@
                 <p>Plan to pack a 25lb bag with enough gear to keep you warm and dry, leaving out all of the unnessecary "stuff" that distracts us from enjoying nature around us.  Our guides will take you on horsback to pristine and remote locations where you will be provided with the necessities of life: hearty food, a cozy shelter, and an opportunity to connect with God.</p>
             </div>
             <div class="col-xs-12">
-                <ul>
+                <ul class="bulletless">
                     <li><i class="fas fa-check-circle"></i> adventure campsite</li>
                     <li><i class="fas fa-check-circle"></i> covered sleeping area</li>
                     <li><i class="fas fa-check-circle"></i> campfire cooking</li>
